; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_vec3.c_vec3_mirrorv.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_vec3.c_vec3_mirrorv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vec3 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vec3_mirrorv(%struct.vec3* %0, %struct.vec3* %1, %struct.vec3* %2) #0 {
  %4 = alloca %struct.vec3*, align 8
  %5 = alloca %struct.vec3*, align 8
  %6 = alloca %struct.vec3*, align 8
  %7 = alloca %struct.vec3, align 4
  store %struct.vec3* %0, %struct.vec3** %4, align 8
  store %struct.vec3* %1, %struct.vec3** %5, align 8
  store %struct.vec3* %2, %struct.vec3** %6, align 8
  %8 = load %struct.vec3*, %struct.vec3** %6, align 8
  %9 = load %struct.vec3*, %struct.vec3** %5, align 8
  %10 = load %struct.vec3*, %struct.vec3** %6, align 8
  %11 = call float @vec3_dot(%struct.vec3* %9, %struct.vec3* %10)
  %12 = fmul float %11, 2.000000e+00
  %13 = call i32 @vec3_mulf(%struct.vec3* %7, %struct.vec3* %8, float %12)
  %14 = load %struct.vec3*, %struct.vec3** %4, align 8
  %15 = load %struct.vec3*, %struct.vec3** %5, align 8
  %16 = call i32 @vec3_sub(%struct.vec3* %14, %struct.vec3* %15, %struct.vec3* %7)
  ret void
}

declare dso_local i32 @vec3_mulf(%struct.vec3*, %struct.vec3*, float) #1

declare dso_local float @vec3_dot(%struct.vec3*, %struct.vec3*) #1

declare dso_local i32 @vec3_sub(%struct.vec3*, %struct.vec3*, %struct.vec3*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
